--- a/src/ale/Ale_Spoty.Rmd
+++ b/src/ale/Ale_Spoty.Rmd
@@ -4,7 +4,7 @@ author: "Alessandra Pescina"
 date: "2023-11-22"
 output: html_document
 ---
-
+ciao ettore
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 set.seed(848)
